2009-27-2 (jimali)
- Total remake of the cmake structure. Multiple build trees are now supported
- Test structure changed to use boost suto tests and ctest
- configuration files renamed from RobWork.cmake to config.cmake
- boost header files removed from ext. Only bindings and experimental remains

2008-4-12 (lpe)
- Added Loader and Saver for Trajectories and Paths. The loader is dependent on Xerces, which the CMake files tests for. 
Besides these loaders/savers different utilities for converting the rw math structures to and from XML is provided.

2008-4-12 (lpe)
- Introduced rw::trajectory::Trajectory interface and renamed the old Trajectory to InterpolatorTrajectory

- Extended rw::invkin::ResolvedRateSolver with support for arbitraty end frame

2008-3-12 (lpe)
  - Updated RWXMLLoader to support Cylinders
  
2008-11-18 (lpe)
  - Removed old stuff marked as deprecated. This was mainly old static method written in 
    upper-case and a new other method ealier renamed. Unless explicitly having specified to use
    deprecated methods this does not change anything.

2008-11-17 (lpe)
  - Replaced the use of auto_ptr with rw::common::Ptr to support GCC 4.3 and corrected include's 
    also to support GCC 4.3.

2008-11-18 (jimali):
  - The XML parser now adds DHparameters (DHSet) as properties to joints that 
    are specified with dhparameters.


2008-11-17 (alauo):

  - Interface for new RRT planner variations: RRTBasic, RRTConnect,
    RRTBidirectional, RRTBalancedBidirectional.

2008-11-14 (alauo):

  - The Z3 planner of Boris Baginski.

2008-10-29 (alauo):

  - Manual section on rw::common::Ptr.

2008-10-14 (alauo):

  - ClosedFormIK::make() factory method.

2008-10-13 (alauo):

  - RevoluteJoint and PrismaticJoint are now an abstract classes. Use
    RevoluteJoint::make() and PrismaticJoint::make() to construct an
    instance.

2008-10-3 (alauo):

  - An implementation of Stefano Carpins ARW path planner.

2008-09-22 (alauo):
